# awesomebook_v2

./: LICENSE  README.md  pyproject.toml
code/: ch05_select_pandas.ipynb  ch05_select_polars.ipynb  ch06_aggregate_polars.ipynb  ch06_aggregate_sql.ipynb  ch07_join_pandas.ipynb  ch07_join_sql.ipynb  ch08_split_pandas.ipynb  ch09_reshaping_pandas.ipynb  ch10_number_pandas.ipynb  ch10_number_polars.ipynb  ch10_number_sql.ipynb  ch11_category_pandas.ipynb  ch11_category_polars.ipynb  ch11_category_sql.ipynb  ch12_datetime_pandas.ipynb  ch12_datetime_polars.ipynb  ch12_datetime_sql.ipynb  ch13_text_pandas.ipynb  ch13_text_polars.ipynb  ch13_text_sql.ipynb  ch14_window_function_pandas.ipynb  ch14_window_function_polars.ipynb  ch14_window_function_sql.ipynb  ch15_exercise_pandas.ipynb  ch15_exercise_polars.ipynb  ch15_exercise_sql.ipynb  ch5_select_sql.ipynb  ch6_aggregate_pandas.ipynb  ch7_join_polars.ipynb  ch9_reshaping_polars.ipynb  ch9_reshaping_sql.ipynb
data/: aozora.parquet  campaign.parquet  holiday.parquet  hotel.parquet  hotel_sales.parquet  monthly_index.parquet  production.parquet  production_missing_category.parquet  production_missing_num.parquet
