[tool.poetry]
name = "awesomebook-v2"
version = "0.1.1"
description = ""
authors = ["Shutaro Hashimoto <hashimoto.shutaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.1"
polars = "0.20.15"
scipy = "1.12.0"
scikit-learn = "1.4.1.post1"
category-encoders = "2.6.3"
spacy = "3.6.1"
ja-ginza = "5.1.3"
google-cloud-bigquery = "3.19.0"
pyarrow = "15.0.1"
imbalanced-learn = "0.12.2"
ipykernel = "^6.29.4"
google-cloud-bigquery-storage = "^2.25.0"
ipywidgets = "^8.1.2"
db-dtypes = "^1.2.0"
jupyterlab = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
